--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dublin-corner-lot",
   "type": "module",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -15,25 +15,25 @@
     "clean": "rimraf dist .astro node_modules yarn.lock .yarn"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.3",
-    "astro": "^4.16.18",
+    "@astrojs/tailwind": "^5.1.4",
+    "astro": "5.1.7",
     "astro-compressor": "^1.0.0",
     "astro-font": "^0.1.81",
-    "lenis": "^1.1.18",
+    "lenis": "^1.1.19",
     "micromodal": "^0.4.10",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.17",
     "tiny-invariant": "^1.3.3",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@iconify-json/fa-brands": "^1.2.1",
     "@iconify-json/mdi": "^1.2.2",
     "@types/micromodal": "^0.3.5",
-    "astro-icon": "^1.1.4",
+    "astro-icon": "^1.1.5",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prettier-plugin-tailwindcss": "^0.6.10",
     "rimraf": "^6.0.1",
     "tailwindcss-fluid-type": "^2.0.7"
   }
