--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dublin-corner-lot",
   "type": "module",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -12,29 +12,28 @@
     "update": "yarn dlx @astrojs/upgrade",
     "cc": "yarn cache clean",
     "format": "prettier --write **/*.astro .",
-    "clean": "rimraf dist .astro node_modules yarn.lock .yarn"
+    "clean": "rimraf dist .astro node_modules yarn.lock pnpm-lock.yaml .yarn .vercel"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.4",
-    "astro": "5.1.7",
-    "astro-compressor": "^1.0.0",
-    "astro-font": "^0.1.81",
-    "lenis": "^1.1.19",
+    "@tailwindcss/vite": "^4.0.3",
+    "astro": "5.2.3",
+    "astro-font": "^1.0.0",
+    "lenis": "^1.1.20",
     "micromodal": "^0.4.10",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.3",
     "tiny-invariant": "^1.3.3",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
-    "@iconify-json/fa-brands": "^1.2.1",
-    "@iconify-json/mdi": "^1.2.2",
+    "@iconify-json/mdi": "^1.2.3",
+    "@playform/compress": "^0.1.7",
     "@types/micromodal": "^0.3.5",
+    "astro-compressor": "^1.0.0",
     "astro-icon": "^1.1.5",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.10",
-    "rimraf": "^6.0.1",
-    "tailwindcss-fluid-type": "^2.0.7"
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "rimraf": "^6.0.1"
   }
 }
