--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "dublin-corner-lot",
   "type": "module",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "format:check": "prettier . --check .",
+    "format": "prettier . --write",
+    "lint": "eslint .",
     "astro": "astro",
     "update": "yarn dlx @astrojs/upgrade",
     "cc": "yarn cache clean",
-    "format": "prettier --write **/*.astro .",
     "clean": "rimraf dist .astro node_modules yarn.lock pnpm-lock.yaml .yarn .vercel"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/vercel": "^8.0.7",
     "@tailwindcss/vite": "^4.0.3",
-    "astro": "5.2.3",
+    "astro": "5.3.0",
     "astro-font": "^1.0.0",
     "lenis": "^1.1.20",
     "micromodal": "^0.4.10",
@@ -29,11 +33,16 @@
     "@iconify-json/mdi": "^1.2.3",
     "@playform/compress": "^0.1.7",
     "@types/micromodal": "^0.3.5",
+    "@typescript-eslint/parser": "^8.24.0",
     "astro-compressor": "^1.0.0",
     "astro-icon": "^1.1.5",
-    "prettier": "^3.4.2",
+    "eslint": "^9.20.1",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "prettier": "^3.5.1",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "typescript-eslint": "^8.24.0"
   }
 }
