--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,18 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    // Alias `src` to `~`
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"]
-    }
-  }
+      "@/*": ["src/*"],
+      "@layout/*": ["src/layouts/*.astro"],
+      "@comp/*": ["src/components/*.astro"],
+      "@img/*": ["src/assets/images/*"]
+    },
+    "verbatimModuleSyntax": true,
+    "moduleResolution": "bundler",
+    "allowJs": true,
+    "skipLibCheck": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/node_modules/*", ".vscode", "dist"]
 }
