--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,11 @@
       "@comp/*": ["src/components/*"],
       "@img/*": ["src/assets/images/*"]
     },
+    "strictNullChecks": true,
+    "verbatimModuleSyntax": true,
+    "allowJs": true,
+    "skipLibCheck": true
   },
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "**/node_modules/*", ".vscode", "dist"]
 }
