--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/vercel": "^8.0.8",
+    "@astrojs/vercel": "8.1.2",
     "@tailwindcss/vite": "^4.0.8",
-    "astro": "5.3.1",
+    "astro": "5.5.2",
     "astro-font": "^1.0.0",
     "lenis": "^1.1.21",
     "micromodal": "^0.4.10",
