--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dublin-corner-lot",
   "type": "module",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -17,32 +17,32 @@
     "clean": "rimraf dist .astro node_modules yarn.lock pnpm-lock.yaml .yarn .vercel"
   },
   "dependencies": {
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/vercel": "8.1.2",
-    "@tailwindcss/vite": "^4.0.8",
-    "astro": "5.5.2",
+    "@astrojs/sitemap": "3.3.0",
+    "@astrojs/vercel": "8.1.3",
+    "@tailwindcss/vite": "^4.1.2",
+    "astro": "5.6.1",
     "astro-font": "^1.0.0",
-    "lenis": "^1.1.21",
-    "micromodal": "^0.4.10",
-    "sharp": "^0.33.5",
-    "tailwindcss": "^4.0.8",
+    "lenis": "^1.2.3",
+    "micromodal": "^0.6.1",
+    "sharp": "^0.34.0",
+    "tailwindcss": "^4.1.2",
     "tiny-invariant": "^1.3.3",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.2.3",
-    "@playform/compress": "^0.1.7",
+    "@playform/compress": "^0.1.9",
     "@types/micromodal": "^0.3.5",
-    "@typescript-eslint/parser": "^8.25.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "astro-compressor": "^1.0.0",
     "astro-icon": "^1.1.5",
-    "eslint": "^9.21.0",
+    "eslint": "^9.23.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "prettier": "^3.5.2",
+    "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "rimraf": "^6.0.1",
-    "typescript-eslint": "^8.25.0"
+    "typescript-eslint": "^8.29.0"
   }
 }
