--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier . --write",
     "lint": "eslint .",
     "astro": "astro",
-    "update": "yarn dlx @astrojs/upgrade",
+    "update": "yarn up -R '*' && yarn up",
+    "update:astro": "yarn dlx @astrojs/upgrade",
     "cc": "yarn cache clean",
     "clean": "rimraf dist .astro node_modules yarn.lock pnpm-lock.yaml .yarn .vercel"
   },
@@ -20,7 +21,7 @@
     "@astrojs/sitemap": "3.3.0",
     "@astrojs/vercel": "8.1.3",
     "@tailwindcss/vite": "^4.1.2",
-    "astro": "5.6.1",
+    "astro": "5.6.2",
     "astro-font": "^1.0.0",
     "lenis": "^1.2.3",
     "micromodal": "^0.6.1",
