--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "dublin-corner-lot",
   "type": "module",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "private": true,
-  "packageManager": "pnpm@10.11.0",
+  "packageManager": "pnpm@10.13.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,38 +13,37 @@
     "format": "prettier . --write",
     "lint": "eslint .",
     "astro": "astro",
-    "update": "pnpm up --latest --recursive '*'",
-    "update:astro": "pnpm dlx @astrojs/upgrade",
-    "cc": "yarn cache clean",
+    "update": "up --latest --recursive '*'",
+    "update:astro": "pnpx @astrojs/upgrade",
     "clean": "rimraf dist .astro node_modules yarn.lock pnpm-lock.yaml .yarn .vercel"
   },
   "dependencies": {
     "@astrojs/sitemap": "3.4.1",
-    "@astrojs/vercel": "8.1.5",
-    "@tailwindcss/vite": "^4.1.8",
-    "astro": "5.9.2",
+    "@astrojs/vercel": "8.2.3",
+    "@iconify-json/mdi": "^1.2.3",
+    "@playform/compress": "^0.1.9",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "5.12.3",
+    "astro-compressor": "^1.0.0",
     "astro-font": "^1.1.0",
-    "lenis": "^1.3.4",
+    "astro-icon": "^1.1.5",
+    "lenis": "^1.3.8",
     "micromodal": "^0.6.1",
-    "sharp": "^0.34.2",
-    "tailwindcss": "^4.1.8",
+    "sharp": "^0.34.3",
+    "tailwindcss": "^4.1.11",
     "tiny-invariant": "^1.3.3",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.2.3",
-    "@playform/compress": "^0.1.9",
     "@types/micromodal": "^0.3.5",
-    "@typescript-eslint/parser": "^8.33.1",
-    "astro-compressor": "^1.0.0",
-    "astro-icon": "^1.1.5",
-    "eslint": "^9.28.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "eslint": "^9.31.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.12",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "rimraf": "^6.0.1",
-    "typescript-eslint": "^8.33.1"
+    "typescript-eslint": "^8.38.0"
   }
 }
