--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "dublin-corner-lot",
   "type": "module",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "private": true,
-  "packageManager": "pnpm@10.13.1",
+  "packageManager": "pnpm@10.14.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,37 +13,36 @@
     "format": "prettier . --write",
     "lint": "eslint .",
     "astro": "astro",
-    "update": "up --latest --recursive '*'",
-    "update:astro": "pnpx @astrojs/upgrade",
+    "upforce": "pnpm up --latest --recursive '*'",
+    "up:astro": "pnpx @astrojs/upgrade",
     "clean": "rimraf dist .astro node_modules yarn.lock pnpm-lock.yaml .yarn .vercel"
   },
   "dependencies": {
-    "@astrojs/sitemap": "3.4.1",
-    "@astrojs/vercel": "8.2.3",
+    "@astrojs/sitemap": "3.4.2",
+    "@astrojs/vercel": "8.2.5",
     "@iconify-json/mdi": "^1.2.3",
-    "@playform/compress": "^0.1.9",
+    "@playform/compress": "^0.2.0",
     "@tailwindcss/vite": "^4.1.11",
-    "astro": "5.12.3",
-    "astro-compressor": "^1.0.0",
+    "astro": "5.12.9",
+    "astro-compressor": "^1.1.2",
     "astro-font": "^1.1.0",
     "astro-icon": "^1.1.5",
     "lenis": "^1.3.8",
     "micromodal": "^0.6.1",
-    "sharp": "^0.34.3",
     "tailwindcss": "^4.1.11",
-    "tiny-invariant": "^1.3.3",
-    "typescript": "^5.8.3"
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@types/micromodal": "^0.3.5",
-    "@typescript-eslint/parser": "^8.38.0",
-    "eslint": "^9.31.0",
+    "@typescript-eslint/parser": "^8.39.0",
+    "eslint": "^9.32.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "rimraf": "^6.0.1",
-    "typescript-eslint": "^8.38.0"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.0"
   }
 }
