--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "dublin-corner-lot",
   "type": "module",
-  "version": "1.4.1",
+  "version": "1.5.0",
   "private": true,
-  "packageManager": "pnpm@10.14.0",
+  "packageManager": "pnpm@10.15.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -18,24 +18,27 @@
     "clean": "rimraf dist .astro node_modules yarn.lock pnpm-lock.yaml .yarn .vercel"
   },
   "dependencies": {
-    "@astrojs/sitemap": "3.5.0",
-    "@astrojs/vercel": "8.2.6",
-    "@iconify-json/mdi": "^1.2.3",
+    "@astrojs/sitemap": "3.5.1",
+    "@astrojs/vercel": "8.2.7",
     "@playform/compress": "^0.2.0",
-    "@tailwindcss/vite": "^4.1.12",
-    "astro": "5.13.2",
+    "@tailwindcss/vite": "^4.1.13",
+    "astro": "5.13.6",
     "astro-compressor": "^1.1.2",
     "astro-font": "^1.1.0",
     "astro-icon": "^1.1.5",
-    "lenis": "^1.3.8",
+    "lenis": "^1.3.11",
     "micromodal": "^0.6.1",
-    "tailwindcss": "^4.1.12",
-    "tiny-invariant": "^1.3.3"
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^3.1.0",
+    "tailwindcss": "^4.1.13",
+    "tiny-invariant": "^1.3.3",
+    "tw-animate-css": "^1.3.8"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "0.5.10",
     "@types/micromodal": "^0.3.5",
-    "@typescript-eslint/parser": "^8.40.0",
-    "eslint": "^9.33.0",
+    "@typescript-eslint/parser": "^8.43.0",
+    "eslint": "^9.35.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "prettier": "^3.6.2",
@@ -43,6 +46,6 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "rimraf": "^6.0.1",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.40.0"
+    "typescript-eslint": "^8.43.0"
   }
 }
