--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "dublin-corner-lot",
   "type": "module",
-  "version": "1.5.2",
+  "version": "1.6.0",
   "private": true,
-  "packageManager": "pnpm@10.17.1",
+  "packageManager": "pnpm@10.18.2",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -19,26 +19,28 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "3.6.0",
-    "@astrojs/vercel": "8.2.8",
+    "@astrojs/vercel": "8.2.10",
     "@playform/compress": "^0.2.0",
-    "@tailwindcss/vite": "^4.1.14",
-    "astro": "5.14.1",
-    "astro-compressor": "^1.1.2",
+    "@tailwindcss/vite": "^4.1.15",
+    "astro": "5.14.7",
+    "astro-compressor": "^1.2.0",
     "astro-font": "^1.1.0",
     "astro-icon": "^1.1.5",
     "lenis": "^1.3.11",
     "micromodal": "^0.6.1",
+    "resend": "^6.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.15",
     "tiny-invariant": "^1.3.3",
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "0.5.10",
+    "@types/cloudflare-turnstile": "^0.2.2",
     "@types/micromodal": "^0.3.5",
-    "@typescript-eslint/parser": "^8.45.0",
-    "eslint": "^9.36.0",
+    "@typescript-eslint/parser": "^8.46.2",
+    "eslint": "^9.38.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "prettier": "^3.6.2",
@@ -46,6 +48,6 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "rimraf": "^6.0.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.45.0"
+    "typescript-eslint": "^8.46.2"
   }
 }
