--- a/starwind.config.json
+++ b/starwind.config.json
@@ -14,6 +14,22 @@
     {
       "name": "button",
       "version": "2.0.1"
+    },
+    {
+      "name": "input",
+      "version": "1.3.0"
+    },
+    {
+      "name": "select",
+      "version": "1.6.0"
+    },
+    {
+      "name": "textarea",
+      "version": "1.3.0"
+    },
+    {
+      "name": "label",
+      "version": "1.2.0"
     }
   ]
 }
