--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "dublin-corner-lot",
   "type": "module",
-  "version": "1.6.1",
+  "version": "1.6.2",
   "private": true,
-  "packageManager": "pnpm@10.18.2",
+  "packageManager": "pnpm@10.22.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "format:check": "prettier . --check .",
-    "format": "prettier . --write",
-    "lint": "eslint .",
+    "format": "biome format --write",
+    "lint": "biome lint",
     "astro": "astro",
     "upforce": "pnpm up --latest --recursive '*'",
     "up:astro": "pnpx @astrojs/upgrade",
@@ -19,35 +18,29 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "3.6.0",
-    "@astrojs/vercel": "8.2.10",
+    "@astrojs/vercel": "9.0.1",
     "@playform/compress": "^0.2.0",
-    "@tailwindcss/vite": "^4.1.15",
-    "astro": "5.14.7",
+    "@tailwindcss/vite": "^4.1.17",
+    "astro": "5.15.9",
     "astro-compressor": "^1.2.0",
     "astro-font": "^1.1.0",
     "astro-icon": "^1.1.5",
-    "lenis": "^1.3.11",
+    "lenis": "^1.3.15",
     "micromodal": "^0.6.1",
-    "resend": "^6.2.2",
-    "tailwind-merge": "^3.3.1",
+    "resend": "^6.5.1",
+    "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.1.1",
-    "tailwindcss": "^4.1.15",
+    "tailwindcss": "^4.1.17",
     "tiny-invariant": "^1.3.3",
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.6",
     "@tailwindcss/forms": "0.5.10",
     "@types/cloudflare-turnstile": "^0.2.2",
     "@types/micromodal": "^0.3.5",
-    "@typescript-eslint/parser": "^8.46.2",
-    "eslint": "^9.38.0",
-    "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "rimraf": "^6.0.1",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.2"
+    "rimraf": "^6.1.0",
+    "typescript": "^5.9.3"
   }
 }
