--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "dublin-corner-lot",
   "type": "module",
-  "version": "1.6.3",
+  "version": "1.6.4",
   "private": true,
-  "packageManager": "pnpm@10.23.0",
+  "packageManager": "pnpm@10.26.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -14,28 +14,29 @@
     "astro": "astro",
     "upforce": "pnpm up --latest --recursive '*'",
     "up:astro": "pnpx @astrojs/upgrade",
+    "up:biome": "pnpm up @biomejs/biome@latest && pnpm biome migrate --write",
     "clean": "rimraf dist .astro node_modules yarn.lock pnpm-lock.yaml .yarn .vercel"
   },
   "dependencies": {
     "@astrojs/sitemap": "3.6.0",
     "@astrojs/vercel": "9.0.2",
     "@playform/compress": "^0.2.0",
-    "@tailwindcss/vite": "^4.1.17",
-    "astro": "5.16.4",
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "5.16.6",
     "astro-compressor": "^1.2.0",
     "astro-font": "^1.1.0",
     "astro-icon": "^1.1.5",
-    "lenis": "^1.3.15",
+    "lenis": "^1.3.16",
     "micromodal": "^0.6.1",
-    "resend": "^6.5.2",
+    "resend": "^6.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^4.1.18",
     "tiny-invariant": "^1.3.3",
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.8",
+    "@biomejs/biome": "^2.3.10",
     "@tailwindcss/forms": "0.5.10",
     "@types/cloudflare-turnstile": "^0.2.2",
     "@types/micromodal": "^0.3.5",
